Only show logout if user is actually logged in

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 		<li th:if="${principal}"><a href="#" th:href="@{/account}">Account</a></li>
 	</ul>
 
-	<form action="logout" method="post">
+	<form action="logout" method="post" th:if="${principal}">
 		<input type="hidden" th:name="${_csrf.parameterName}"
 			th:value="${_csrf.token}" />
 
